--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -2,6 +2,9 @@ backend:
   name: git-gateway
   branch: master
 publish_mode: editorial_workflow
+slug:
+  encoding: 'ascii'
+  clean_accents: true
 site_url: 'https://oyan.digital'
 media_folder: 'src/images'
 public_folder: 'images'
