Chunk of small design improvements

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "url": "git@github.com:oyanqazastan/website.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "oyanqazaqstankz",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/oyanqazastan/website/issues"
