--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
     "@tbranyen/jsdom": "^13.0.0",
     "concurrently": "^4.1.2",
+    "eleventy-plugin-pwa": "^1.0.8",
     "html-minifier": "^4.0.0",
     "json-to-scss": "^1.3.1",
     "sass": "^1.22.10",
