--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Website of Oyan, Qazaqstan",
   "main": "index.js",
   "dependencies": {
-    "@11ty/eleventy": "^0.8.3",
-    "@11ty/eleventy-plugin-rss": "^1.0.6",
+    "@11ty/eleventy": "^0.9.0",
+    "@11ty/eleventy-plugin-rss": "^1.0.7",
     "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
     "@tbranyen/jsdom": "^13.0.0",
     "concurrently": "^4.1.2",
+    "eleventy-plugin-pwa": "^1.0.8",
     "html-minifier": "^4.0.0",
     "json-to-scss": "^1.3.1",
     "sass": "^1.22.10",
@@ -20,8 +21,8 @@
     "cross-env": "^5.2.0",
     "make-dir-cli": "^2.0.0",
     "prettier": "^1.18.2",
-    "rollup": "^1.19.4",
-    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup": "^1.20.3",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^5.0.3"
