--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Oyan",
-  "name": "Oyan, Qazaqstam",
+  "name": "Oyan, Qazaqstan",
   "icons": [
     {
       "src": "/images/icon.png",
